[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/changable_label.gd" type="Script" id=1]
[ext_resource path="res://scripts/groups.gd" type="Script" id=2]
[ext_resource path="res://scripts/info.gd" type="Script" id=3]
[ext_resource path="res://textures/icons.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 12, 12 )

[node name="default" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="title" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 24.0
align = 1
valign = 1
script = ExtResource( 1 )

[node name="LineEdit" type="LineEdit" parent="."]
visible = false
anchor_right = 1.0
margin_bottom = 24.0

[node name="VSplitContainer" type="VSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 24.0

[node name="ScrollContainer" type="ScrollContainer" parent="VSplitContainer"]
margin_right = 1024.0
margin_bottom = 378.0
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="container" type="HBoxContainer" parent="VSplitContainer/ScrollContainer"]
margin_right = 1024.0
margin_bottom = 378.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="info" type="Control" parent="VSplitContainer"]
margin_top = 390.0
margin_right = 1024.0
margin_bottom = 576.0
rect_min_size = Vector2( 0, 48 )
size_flags_vertical = 3
script = ExtResource( 3 )

[node name="name" type="LineEdit" parent="VSplitContainer/info"]
anchor_right = 1.0
margin_bottom = 24.0

[node name="delete" type="TextureButton" parent="VSplitContainer/info/name"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -16.0
margin_top = -6.0
margin_right = -4.0
margin_bottom = 6.0
rect_min_size = Vector2( 12, 12 )
texture_normal = SubResource( 1 )
expand = true
stretch_mode = 3

[node name="desc" type="TextEdit" parent="VSplitContainer/info"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 24.0

[connection signal="focus_exited" from="LineEdit" to="title" method="_on_LineEdit_focus_exited"]
[connection signal="text_entered" from="LineEdit" to="title" method="_on_LineEdit_text_entered"]
[connection signal="text_entered" from="VSplitContainer/info/name" to="VSplitContainer/info" method="_on_name_text_entered"]
[connection signal="button_down" from="VSplitContainer/info/name/delete" to="VSplitContainer/info" method="_on_delete_button_down"]
[connection signal="text_changed" from="VSplitContainer/info/desc" to="VSplitContainer/info" method="_on_desc_text_changed"]
